[package]
name = "edgar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "runtime-tokio-rustls"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "tokio-macros"] }
